objects/EBS_Orders__c.object
<CustomObject>
    <fields>
        <fullName>EBS_Header_ID__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <externalId>true</externalId>
        <label>EBS Header ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EBS_Order_Number__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>EBS Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Order_Status__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>EBS Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Quote_Number__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>EBS Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>EBS Orders</relationshipLabel>
        <relationshipName>EBS_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EBS Order</label>
    <nameField>
        <displayFormat>EBS-{00000}</displayFormat>
        <label>EBS Orders</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBS Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>